[gd_scene load_steps=7 format=2]

[ext_resource path="res://pages/page 1.tscn" type="PackedScene" id=1]
[ext_resource path="res://main_camera.gd" type="Script" id=2]
[ext_resource path="res://Main.gd" type="Script" id=3]
[ext_resource path="res://interface elements/button/button.tscn" type="PackedScene" id=4]
[ext_resource path="res://pages/page 2.tscn" type="PackedScene" id=5]
[ext_resource path="res://pages/page 3.tscn" type="PackedScene" id=6]

[node name="Main" type="Node2D"]
script = ExtResource( 3 )

[node name="page 3" parent="." instance=ExtResource( 6 )]
position = Vector2( 2000, 0 )

[node name="page 2" parent="." instance=ExtResource( 5 )]
position = Vector2( 1000, 0 )

[node name="page 1" parent="." instance=ExtResource( 1 )]

[node name="main_camera" type="Camera2D" parent="."]
position = Vector2( 500, 500 )
current = true
script = ExtResource( 2 )

[node name="left" parent="main_camera" instance=ExtResource( 4 )]
margin_left = -491.5
margin_top = -480.0
margin_right = -291.5
margin_bottom = -330.0
rect_scale = Vector2( 0.5, 0.5 )
text = "<"
up_color = Color( 0.929412, 0.333333, 0.517647, 1 )
down_color = Color( 0.945098, 0.713726, 0.329412, 1 )
release_color = Color( 0.156863, 0.866667, 0.596078, 1 )

[node name="right" parent="main_camera" instance=ExtResource( 4 )]
margin_left = 390.0
margin_top = -484.0
margin_right = 590.0
margin_bottom = -334.0
rect_scale = Vector2( 0.5, 0.5 )
text = ">"
up_color = Color( 0.929412, 0.333333, 0.517647, 1 )
down_color = Color( 0.945098, 0.713726, 0.329412, 1 )
release_color = Color( 0.156863, 0.866667, 0.596078, 1 )
[connection signal="clicked" from="main_camera/left" to="." method="_on_left_clicked"]
[connection signal="clicked" from="main_camera/right" to="." method="_on_right_clicked"]
